cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj13_TupleStruct_1.plcfunc
FUNCTION proj13_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj13_TupleStruct_1 := tuple.field13;
END_FUNCTION
